--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "config": "3.2.2",
+    "eslint": "^6.3.0",
     "express": "4.*",
     "jsonwebtoken": "8.5.1",
     "mongoose": "5.6.11",
